@@ -1,3 +1,7 @@
+<h5>1.7.1 Beta 1   [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
+<hr>
+- index.html in /preloads (mamba)
+
 <h5>1.07 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.10, PHP 7.4.12, PHP 8.0 RC-3
 <hr>
 - index.html to index.php (mamba)
